tests/sksl/errors/GrBadIn.fp
in half4 c;
half4 main() {
    return c;
}
